--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,12 @@
   "description": "Real-time flood and weather monitoring for Ho Chi Minh City.",
   "icons": [
     {
-      "src": "https://cdn-icons-png.flaticon.com/512/1163/1163624.png",
+      "src": "/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
