--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,7 @@
   "description": "Real-time flood and weather monitoring for Ho Chi Minh City.",
   "icons": [
     {
-      "src": "/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/icon-512.png",
+      "src": "https://cdn-icons-png.flaticon.com/512/1163/1163624.png",
       "sizes": "512x512",
       "type": "image/png"
     }
